# gladrags

./: .gitignore  ChangeLog  README  README.md  configure.ac
src/: Makefile.am  about.in  gladrags.in  org.mate.panel.applet.gladrags.gschema.xml  org.mate.panel.applet.gladragsAppletFactory.service.in  org.mate.panel.gladrags.mate-panel-applet.in  prefs_dlg.in
